[package]
name = "gitlab-cli"
authors= ["Valvassori Moïse <moise.valvassori@gmail.com>"]
description= "Command line interface to Gitlab's API"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/djedi23/gitlab_cli"
repository = "https://github.com/djedi23/gitlab_cli"

[dependencies]
chrono = "0.4"
clap = "4.0"
crud-api = {version="0.1", default-features=false, features=["toml","json","yaml"]}
# crud-api = {version="0.1", default-features=false, features=["toml","json","yaml","debug-http"]}
crud-auth = {version="0.1"}
crud-auth-bearer = {version="0.1"}
hyper = "0.14"
log = "0.4"

miette = { version = "5.2", features = ["fancy"] }
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
# To force static openssl
openssl = { version = "0.10", features = ["vendored"] }



[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
